2016-09-08  Nick Gasson  <nick@nickg.me.uk>

	* configure.ac: updated to GNU gettext 0.19 and removed
	generated files from version control.

	* src/bubblegen.c (make_dream_bubble): fix warning about
	deprecation of `gdk_pixbuf_unref`.

	* xcowsay 1.4 released!

2015-05-31  Nick Gasson  <nick@nickg.me.uk>

	* src/display_cow.c (close_when_clicked): allow close event to
	be specified in settings.
	* src/xcowsay.c (main): add --release option to close window on
	mouse button release.

2012-11-19  Nick Gasson  <nick@nickg.me.uk>

	* src/config_file.c (next_token): allow values with quotes
	to be set in the config file.

2011-01-28  Justin Bogner  <justin.bogner@emc.com>

	* src/xcowsay.c (main): The reading-speed option requires an
	argument.

2010-11-11  Nick Gasson  <nick@nickg.me.uk>

	* xcowsay 1.3 released!

2010-11-06  Nick Gasson  <nick@nickg.me.uk>

	* src/bubblegen.c (bubble_init_left): Fix rendering of
	left-handed though bubbles.
	* src/bubblegen.c (bubble_content_left): Align left-handed text
	content correctly.
	* src/xcowsay.c (main): Add -l option as short form of --left.
	* xcowsay.6: Document --left option.

	* src/xcowsay.c (main): Fix bug with absolute dream image
	paths. Use realpath(3) to get canonical path.

2010-10-23  Nick Gasson  <nick@nickg.me.uk>

	* src/bubblegen.c (bubble_init): Add a function to generate
	left-handed bubbles.
	* src/xcowsay.c (main): Add --left option to put bubble on
	the left of the cow.

2010-10-02  Nick Gasson  <nick@nickg.me.uk>

	* xcowsay.6: Update bugs section: remove note about lack of word
	wrapping; add comment that anti-aliasing is unlikely to happen.

2010-09-29  Nick Gasson  <nick@nickg.me.uk>

	* src/display_cow.c (normal_setup, display_cow): Calculate
	maximum size of bubble to support word wrapping.
	* src/bubblegen.c (make_text_bubble): Use Pango to word-wrap
	text that is too wide to fit in the bubble.
	* src/xcowsay.c (main): Add --no-wrap option to disable word
	wrapping.